
plugins {
  id 'java'
  id 'application'
}

group = 'com.fleet'
version = '1.0.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation "ch.qos.logback:logback-classic:1.2.11"
    implementation "com.google.guava:guava:19.0"  //for bloom filter
}

application {
    mainClass = 'com.fleet.training.Main'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}

tasks {
    run {
        standardInput = System.in
    }
}


apply from: 'gradle/lombok.gradle'
apply from: 'gradle/unit-test.gradle'
